# Vex

./: .gitignore  CMakeLists.txt  LICENSE
Docs/: Lexer.md
Source/AST/: ASTNode.h  CMakeLists.txt  Expression.h  Statement.h
Source/Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.h  Test.Lexer.cpp  Token.cpp  Token.h  TokenEnums.h
Source/Lexer/Tests/: Test.Lexer.001.cpp  Test.Lexer.002.cpp  Test.Lexer.003.cpp  Test.Lexer.004.cpp  Test.Lexer.005.cpp  Test.Lexer.006.cpp  Test.Lexer.007.cpp  Test.Lexer.008.cpp  Test.Lexer.009.cpp  Test.Lexer.010.cpp  Test.Lexer.011.cpp  Test.Lexer.012.cpp
